// protolint:disable FIELD_NAMES_LOWER_SNAKE_CASE

syntax = "proto3";

package nxngstarter;

// import "node_modules/google-gax/protos/google/protobuf/any.proto";
import "google/protobuf/any.proto";

message Entity {
  string id = 1;
  int32 integer = 2;
  bool boolean = 3;
  float float = 4;
  google.protobuf.Any any = 5;
  repeated SubEntity subEntities = 6;
}

message SubEntity {
  string id = 1;
}

message EntityById {
  string id = 1;
}
