// protolint:disable FIELD_NAMES_LOWER_SNAKE_CASE

syntax = "proto3";

package nxngstarter;

// debug command (server should be started beforehand)
// npx grpcc -i --proto tools/proto/root.proto --address localhost:8082
// for this to work proto files need to have relative paths
// import "tools/proto/common.proto";
import "common.proto";

service EntityService {
  rpc FindOne(EntityById) returns (Entity) {};
  rpc FindMany(stream EntityById) returns (stream Entity) {};
}
